envoyfilter/httpecho.yaml
##################################################################################################
# httpecho service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: httpecho
  labels:
    app: httpecho
spec:
  ports:
  - name: http
    port: 5678
  selector:
    app: httpecho
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpecho-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpecho
      version: v1
  template:
    metadata:
      labels:
        app: httpecho
        version: v1
    spec:
      containers:
      - image: solsson/http-echo
        imagePullPolicy: IfNotPresent
        name: httpecho
        ports:
        - containerPort: 5678
